<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_activity_more"
        layout="@layout/toolbar_main" />

    <FrameLayout
        android:id="@+id/fl_activity_more_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large">

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextView.H1"
            app:fontFamily="@font/lato"
            android:text="@string/label_edit_profile"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/edit_profile_menu_content_description"
            android:src="@drawable/arrow" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="?android:attr/listDivider" />

    <FrameLayout
        android:id="@+id/fl_activity_more_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large">

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextView.H1"
            app:fontFamily="@font/lato"
            android:text="@string/label_setting"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/settings_menu_content_description"
            android:src="@drawable/arrow" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="?android:attr/listDivider" />

    <FrameLayout
        android:id="@+id/fl_activity_more_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large">

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextView.H1"
            app:fontFamily="@font/lato"
            android:text="@string/label_help"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/settings_menu_content_description"
            android:src="@drawable/arrow" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="?android:attr/listDivider" />

    <FrameLayout
        android:id="@+id/fl_activity_more_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large">

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextView.H1"
            app:fontFamily="@font/lato"
            android:text="@string/label_terms"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/settings_menu_content_description"
            android:src="@drawable/arrow" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="?android:attr/listDivider" />

    <FrameLayout
        android:id="@+id/fl_activity_more_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large">

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextView.H1"
            app:fontFamily="@font/lato"
            android:text="@string/label_about"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/settings_menu_content_description"
            android:src="@drawable/arrow" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="?android:attr/listDivider" />

    <FrameLayout
        android:id="@+id/fl_activity_more_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large">

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextView.H1"
            app:fontFamily="@font/lato"
            android:text="@string/label_tell_your_friends"
            android:textStyle="normal" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="?android:attr/listDivider" />

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/fl_activity_more_logout"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large">

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextView.H1"
            app:fontFamily="@font/lato"
            android:text="@string/label_logout"
            android:textStyle="normal" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="?android:attr/listDivider" />

</LinearLayout>