<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_large">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_form_reminder_jenis_arv"
        style="@style/TextView.H4"
        android:text="@string/label_jenis_arv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_form_reminder_jenis_arv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        app:fontFamily="@font/lato"
        app:layout_constraintStart_toStartOf="@id/tv_form_reminder_jenis_arv"
        app:layout_constraintTop_toBottomOf="@id/tv_form_reminder_jenis_arv" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_form_reminder_reminder"
        style="@style/TextView.H4"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/gender_label"
        app:layout_constraintStart_toStartOf="@id/tv_form_reminder_jenis_arv"
        app:layout_constraintTop_toBottomOf="@id/spinner_form_reminder_jenis_arv" />

    <RadioGroup
        android:id="@+id/rg_form_reminder_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tv_form_reminder_jenis_arv"
        app:layout_constraintTop_toBottomOf="@id/tv_form_reminder_reminder">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_form_reminder_eight_hours"
            style="@style/Radio"
            android:checked="true"
            android:text="@string/label_eight_hours" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_form_reminder_twelve_hours"
            style="@style/Radio"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/label_twelve_hours" />

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_form_reminder_starting_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="@id/tv_form_reminder_jenis_arv"
        app:layout_constraintTop_toBottomOf="@id/rg_form_reminder_reminder">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_form_reminder_starting_time"
            style="@style/TextField"
            android:hint="@string/label_starting_time"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>